fixed problem with the footer overlapping the skate design as well as added navLink functionality to the rest of the website.

--- a/src/app.css
+++ b/src/app.css
@@ -144,6 +144,11 @@ h3 {
     padding: 20px;
   }
 
+  .button-not-available {
+    font-size: 24px;
+    padding: 20px;  
+  }
+
   h2 {
     font-size: 24px;
   }
